unpackaged/main/default/objects/GT_Brand__c/GT_Brand__c.object-meta.xml
<CustomObject>
    <description>This will be the product object for all accounts in Generic Template</description>
    <label>Product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>