unpackaged/main/default/objects/GT_Brand__c/fields/Additional_Cost_Description_5__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Description_5__c</fullName>
    <label>Additional Cost Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>AV/Lighting</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Collateral/Printing</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Freight/Shipping</fullName>
            </value>
            <value>
                <fullName>I&amp;D</fullName>
            </value>
            <value>
                <fullName>Lead Retrieval</fullName>
            </value>
            <value>
                <fullName>Material Handling</fullName>
            </value>
            <value>
                <fullName>Promotional Items</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Signage/Kiosk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>