unpackaged/main/default/objects/GT_Brand__c/fields/Additional_Cost_Description_6__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Description_6__c</fullName>
    <label>Additional Cost Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>