unpackaged/main/default/objects/GT_Brand__c/fields/Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Amount_3__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>