unpackaged/main/default/objects/GT_Brand__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activelle</fullName>
            </value>
            <value>
                <fullName>Actrapid</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>ASD</fullName>
            </value>
            <value>
                <fullName>Business Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Business Support</fullName>
            </value>
            <value>
                <fullName>Changing Diabetes</fullName>
            </value>
            <value>
                <fullName>Changing Haemophilia</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Commercial Buyers</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Convention Marketing</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Diabetes Marketing</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Estrofem</fullName>
            </value>
            <value>
                <fullName>External Affairs</fullName>
            </value>
            <value>
                <fullName>Fiasp</fullName>
            </value>
            <value>
                <fullName>FlexPen</fullName>
            </value>
            <value>
                <fullName>FlexTouch</fullName>
            </value>
            <value>
                <fullName>GEM (Government/Education/Medical)</fullName>
            </value>
            <value>
                <fullName>GlucaGen</fullName>
            </value>
            <value>
                <fullName>Government (Federal)</fullName>
            </value>
            <value>
                <fullName>Gov’t Relations/PA</fullName>
            </value>
            <value>
                <fullName>Growth Disorder</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Hemophilia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>