unpackaged/main/default/objects/GT_Brand__c/fields/Brand_Name_Pharma__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_Pharma__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acrodat</fullName>
            </value>
            <value>
                <fullName>Adjuvant</fullName>
            </value>
            <value>
                <fullName>Alopeca</fullName>
            </value>
            <value>
                <fullName>Alt Site</fullName>
            </value>
            <value>
                <fullName>Anacor- Disease State</fullName>
            </value>
            <value>
                <fullName>Anti Infectives</fullName>
            </value>
            <value>
                <fullName>Architools</fullName>
            </value>
            <value>
                <fullName>Atgam</fullName>
            </value>
            <value>
                <fullName>Avelumab</fullName>
            </value>
            <value>
                <fullName>Bavencio</fullName>
            </value>
            <value>
                <fullName>Belsomra</fullName>
            </value>
            <value>
                <fullName>BeneFIX</fullName>
            </value>
            <value>
                <fullName>BeneFIX (Europe Only)</fullName>
            </value>
            <value>
                <fullName>Besponsa</fullName>
            </value>
            <value>
                <fullName>Biomarkers</fullName>
            </value>
            <value>
                <fullName>BioSimilars</fullName>
            </value>
            <value>
                <fullName>Boco</fullName>
            </value>
            <value>
                <fullName>Bosulif</fullName>
            </value>
            <value>
                <fullName>Brand A</fullName>
            </value>
            <value>
                <fullName>Brand B</fullName>
            </value>
            <value>
                <fullName>Brand C</fullName>
            </value>
            <value>
                <fullName>Bravencio</fullName>
            </value>
            <value>
                <fullName>Bridion</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>C. Difficile</fullName>
            </value>
            <value>
                <fullName>Cancidas</fullName>
            </value>
            <value>
                <fullName>Caverject</fullName>
            </value>
            <value>
                <fullName>CentreOne</fullName>
            </value>
            <value>
                <fullName>Champix</fullName>
            </value>
            <value>
                <fullName>Chantix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>