unpackaged/main/default/objects/GT_Brand__c/fields/Brand_Team_Contact__c.field-meta.xml
<CustomField>
    <fullName>Brand_Team_Contact__c</fullName>
    <label>Product Team Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adamczyk, Alice</fullName>
            </value>
            <value>
                <fullName>Ahmed, Noor</fullName>
            </value>
            <value>
                <fullName>Akkad, Fouad</fullName>
            </value>
            <value>
                <fullName>Alex Nieto</fullName>
            </value>
            <value>
                <fullName>Alice Adamczyk</fullName>
            </value>
            <value>
                <fullName>Alitto, Liana</fullName>
            </value>
            <value>
                <fullName>Alper (Schubach), Jen</fullName>
            </value>
            <value>
                <fullName>Amanda Wyatts</fullName>
            </value>
            <value>
                <fullName>Ami Patel</fullName>
            </value>
            <value>
                <fullName>Andrei, Elisa</fullName>
            </value>
            <value>
                <fullName>Andrew Clair</fullName>
            </value>
            <value>
                <fullName>Andrew Segan</fullName>
            </value>
            <value>
                <fullName>Anjos, Suzana</fullName>
            </value>
            <value>
                <fullName>Anthony Antonelli</fullName>
            </value>
            <value>
                <fullName>Apostolakis, Yannis</fullName>
            </value>
            <value>
                <fullName>Appel, Pam</fullName>
            </value>
            <value>
                <fullName>Appetiti, Valentina</fullName>
            </value>
            <value>
                <fullName>Arghir, Andrei</fullName>
            </value>
            <value>
                <fullName>Ariel Lichtenstein</fullName>
            </value>
            <value>
                <fullName>Aronda Forsey</fullName>
            </value>
            <value>
                <fullName>Aronda Perry Forsey</fullName>
            </value>
            <value>
                <fullName>Bagchi, Madhavi</fullName>
            </value>
            <value>
                <fullName>Bakken, Dan</fullName>
            </value>
            <value>
                <fullName>Baldwin, Richard</fullName>
            </value>
            <value>
                <fullName>Barishman, Ilana</fullName>
            </value>
            <value>
                <fullName>Barry Chester</fullName>
            </value>
            <value>
                <fullName>Belenkiy, Ilya</fullName>
            </value>
            <value>
                <fullName>Berg, Kristen</fullName>
            </value>
            <value>
                <fullName>Bernice Golla</fullName>
            </value>
            <value>
                <fullName>Bhalla, Atul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>