unpackaged/main/default/objects/GT_Brand__c/fields/Budget_Owner__c.field-meta.xml
<CustomField>
    <fullName>Budget_Owner__c</fullName>
    <description>This field was of type text earlier and now changed to picklist</description>
    <label>Budget Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASD</fullName>
            </value>
            <value>
                <fullName>Business Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Business Support/Career Fairs</fullName>
            </value>
            <value>
                <fullName>Channel/Partner</fullName>
            </value>
            <value>
                <fullName>Convention Marketing</fullName>
            </value>
            <value>
                <fullName>Corporate Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Corporate – Other</fullName>
            </value>
            <value>
                <fullName>Diabetes Marketing</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Fiasp</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>GlucaGen HypoKit</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Gov’t Relations/PA</fullName>
            </value>
            <value>
                <fullName>Growth Disorder</fullName>
            </value>
            <value>
                <fullName>Hemophilia</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Levemir</fullName>
            </value>
            <value>
                <fullName>Market Access</fullName>
            </value>
            <value>
                <fullName>Medical Information</fullName>
            </value>
            <value>
                <fullName>National Sales</fullName>
            </value>
            <value>
                <fullName>Norditropin</fullName>
            </value>
            <value>
                <fullName>Novoeight</fullName>
            </value>
            <value>
                <fullName>NovoLog</fullName>
            </value>
            <value>
                <fullName>NovoLog Mix 70/30</fullName>
            </value>
            <value>
                <fullName>NovoSeven</fullName>
            </value>
            <value>
                <fullName>Obesity Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>