unpackaged/main/default/objects/GT_Brand__c/fields/Budget_Update_Sent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Update_Sent__c</fullName>
    <label>Budget Update Sent Date</label>
    <type>Date</type>
</CustomField>