unpackaged/main/default/objects/GT_Brand__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <inlineHelpText>Required when &#39;Canceled&#39; is Checked</inlineHelpText>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>