unpackaged/main/default/objects/GT_Brand__c/fields/Contact_Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Not_Listed__c</fullName>
    <label>Contact Not Listed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>