unpackaged/main/default/objects/GT_Brand__c/fields/Cost_Savings_report_submitted_to_NNI__c.field-meta.xml
<CustomField>
    <fullName>Cost_Savings_report_submitted_to_NNI__c</fullName>
    <label>Cost Savings report submitted to NNI</label>
    <type>Date</type>
</CustomField>