unpackaged/main/default/objects/GT_Brand__c/fields/Estimated_Cost_Origination__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_Origination__c</fullName>
    <label>Estimated Cost Origination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous Years Actual</fullName>
            </value>
            <value>
                <fullName>GES Proposal/CO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>