unpackaged/main/default/objects/GT_Brand__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Event Activity Type</description>
    <label>Event</label>
    <referenceTo>GT_Event_RL__c</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>