unpackaged/main/default/objects/GT_Brand__c/fields/Event_Staff_Shirt_Cost__c.field-meta.xml
<CustomField>
    <fullName>Event_Staff_Shirt_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Event Staff Shirt Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>