unpackaged/main/default/objects/GT_Brand__c/fields/Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Exhibit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibit</label>
    <referenceTo>GT_Exhibit__c</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>