unpackaged/main/default/objects/GT_Brand__c/fields/F_B_Costs_Actual__c.field-meta.xml
<CustomField>
    <fullName>F_B_Costs_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>F&amp;B Costs Actual</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>