unpackaged/main/default/objects/GT_Brand__c/fields/Fiber_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Business_Unit__c</fullName>
    <label>Fiber Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Partner</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Channel/Partner</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>