unpackaged/main/default/objects/GT_Brand__c/fields/Final_Invoice_submitted_to_NNI__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_submitted_to_NNI__c</fullName>
    <label>Final Invoice Date submitted to NNI</label>
    <type>Date</type>
</CustomField>