unpackaged/main/default/objects/GT_Brand__c/fields/Funding_Provider_Brand__c.field-meta.xml
<CustomField>
    <fullName>Funding_Provider_Brand__c</fullName>
    <label>Funding Provider Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjuvant</fullName>
            </value>
            <value>
                <fullName>Belsomra</fullName>
            </value>
            <value>
                <fullName>Biomarkers</fullName>
            </value>
            <value>
                <fullName>BioSimilars</fullName>
            </value>
            <value>
                <fullName>Bridion</fullName>
            </value>
            <value>
                <fullName>Business Development &amp; Strategy</fullName>
                <isActive>false</isActive>
                <label>Business Development &amp; Strategy</label>
            </value>
            <value>
                <fullName>Business Support/Career Fairs</fullName>
                <isActive>false</isActive>
                <label>Business Support/Career Fairs</label>
            </value>
            <value>
                <fullName>Cancidas</fullName>
            </value>
            <value>
                <fullName>Channel/Partner</fullName>
                <isActive>false</isActive>
                <label>Channel/Partner</label>
            </value>
            <value>
                <fullName>Corporate – Other</fullName>
                <isActive>false</isActive>
                <label>Corporate – Other</label>
            </value>
            <value>
                <fullName>Cubicin</fullName>
            </value>
            <value>
                <fullName>Delstrigo</fullName>
            </value>
            <value>
                <fullName>Dificid</fullName>
            </value>
            <value>
                <fullName>Diversity</fullName>
            </value>
            <value>
                <fullName>Elvona</fullName>
            </value>
            <value>
                <fullName>Emend</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
                <isActive>false</isActive>
                <label>Emerging Technologies</label>
            </value>
            <value>
                <fullName>Entereg</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <isActive>false</isActive>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>Follistim</fullName>
            </value>
            <value>
                <fullName>Ganirelix</fullName>
            </value>
            <value>
                <fullName>Gardasil 9</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>ILUM</fullName>
            </value>
            <value>
                <fullName>Invanz</fullName>
            </value>
            <value>
                <fullName>Isentress</fullName>
            </value>
            <value>
                <fullName>Janumet</fullName>
            </value>
            <value>
                <fullName>Januvia</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
                <isActive>false</isActive>
                <label>K-12</label>
            </value>
            <value>
                <fullName>Keytruda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>