unpackaged/main/default/objects/GT_Brand__c/fields/Funding_Provider_Department__c.field-meta.xml
<CustomField>
    <fullName>Funding_Provider_Department__c</fullName>
    <label>Funding Provider Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>