unpackaged/main/default/objects/GT_Brand__c/fields/Funding_Provider_Region__c.field-meta.xml
<CustomField>
    <fullName>Funding_Provider_Region__c</fullName>
    <label>Funding Provider Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>