unpackaged/main/default/objects/GT_Brand__c/fields/General_Event_Cost_Estimated__c.field-meta.xml
<CustomField>
    <fullName>General_Event_Cost_Estimated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>General Event Cost Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>