unpackaged/main/default/objects/GT_Brand__c/fields/General_Event_Costs__c.field-meta.xml
<CustomField>
    <fullName>General_Event_Costs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Event Costs</label>
    <referenceTo>GT_General_Event_Costs__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>