unpackaged/main/default/objects/GT_Brand__c/fields/GES_Connect_Event__c.field-meta.xml
<CustomField>
    <fullName>GES_Connect_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up for GT_Event__c  (GES Connect Event)</description>
    <label>GES Connect Event</label>
    <referenceTo>GT_Event__c</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>