unpackaged/main/default/objects/GT_Brand__c/fields/Meeting_Planning__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Planning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Planning</label>
    <referenceTo>GT_Meeting_Planning__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>