unpackaged/main/default/objects/GT_Brand__c/fields/Meeting_Room__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Room</label>
    <referenceTo>GT_Meeting_Room__c</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>