unpackaged/main/default/objects/GT_Brand__c/fields/Meeting_Room_Cost_Estimated_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Cost_Estimated_CrownCastle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meeting Room Costs Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>