unpackaged/main/default/objects/GT_Brand__c/fields/Meeting_Room_Services_Cost_Actual_CC__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Services_Cost_Actual_CC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meeting Room Services Costs Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>