unpackaged/main/default/objects/GT_Brand__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>GT_Membership__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>