unpackaged/main/default/objects/GT_Brand__c/fields/Membership_Costs_Actual__c.field-meta.xml
<CustomField>
    <fullName>Membership_Costs_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Membership Costs Actual</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>