unpackaged/main/default/objects/GT_Brand__c/fields/MP_Costs_Actual__c.field-meta.xml
<CustomField>
    <fullName>MP_Costs_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meeting Planning Costs Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>