unpackaged/main/default/objects/GT_Brand__c/fields/Network_Activity_NWA__c.field-meta.xml
<CustomField>
    <fullName>Network_Activity_NWA__c</fullName>
    <label>Network Activity (NWA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>