unpackaged/main/default/objects/GT_Brand__c/fields/NNI_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>NNI_Stakeholder__c</fullName>
    <label>Stakeholder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>