unpackaged/main/default/objects/GT_Brand__c/fields/NNI_Stakeholder_email__c.field-meta.xml
<CustomField>
    <fullName>NNI_Stakeholder_email__c</fullName>
    <label>Stakeholder Email</label>
    <type>Email</type>
</CustomField>